--- a/test/app.ipynb
+++ b/test/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "REDDIT_PASSWORD = os.environ[\"REDDIT_PASSWORD\"]\n",
     "REDDIT_USERNAME = os.environ[\"REDDIT_USERNAME\"]\n",
     "REDDIT_AGENT_NAME = os.environ[\"REDDIT_AGENT_NAME\"]\n",
-    "SUBREDDIT_NAME = os.environ[\"SUBREDDIT_NAME\"]"
+    "SUBREDDIT_NAME=\"\""
    ]
   },
   {
